-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 26, 27
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8376453 | 26.0.1 | Thomas Schatzl | P2 | Resolved | Fixed | b03 |
| JDK-8376288 | 26 | Thomas Schatzl | P2 | Resolved | Fixed | b33 |
Stack: [0x00007fffcb530000,0x00007fffcb630000], sp=0x00007fffcb62ec90, free space=1019k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf0f789] PSOldGen::object_iterate_block(ObjectClosure*, unsigned long)+0x179
V [libjvm.so+0xec1583] ParallelScavengeHeap::object_iterate_parallel(ObjectClosure*, HeapBlockClaimer*)+0x63
V [libjvm.so+0x9e8882] ParHeapInspectTask::work(unsigned int)+0xe2
V [libjvm.so+0x11a04e0] WorkerThread::run()+0x80
V [libjvm.so+0x10c603f] Thread::call_run()+0x9f
V [libjvm.so+0xe9cca6] thread_native_entry(Thread*)+0xc6
As far as I can tell, the only thing that they do that relates to this is to enable ObjectCountAfterGC JFR events. The crash happens reliably with JDK 26, but not with JDK 25.
I am trying to make a reproducer, but no success so far. I am attaching the hs_err, maybe there's something useful in it. Let me know if you want me to try something out. I'll also investigate further.
- backported by
-
JDK-8376288 Parallel: Crash iterating over unloaded classes for ObjectCountAfterGC event
-
- Resolved
-
-
JDK-8376453 Parallel: Crash iterating over unloaded classes for ObjectCountAfterGC event
-
- Resolved
-
- caused by
-
JDK-8361404 Parallel: Group all class unloading logc at the end of marking phase
-
- Resolved
-
- relates to
-
JDK-8375728 Serial: Move ObjectCountAfterGC reporting to post-compaction
-
- Open
-
- links to
-
Commit(jdk26)
openjdk/jdk/d0fd898a
-
Commit(master)
openjdk/jdk/f3381f0f
-
Review(jdk26)
openjdk/jdk/29381
-
Review(master)
openjdk/jdk/29318