8375314: Parallel: Crash iterating over unloaded classes for ObjectCountAfterGC event

Reviewed-by: rkennke, sjohanss, iwalulya